# media_cleanser

./: .gitignore  README.md  pyproject.toml
media_cleanser/: clean_gazette.py  gazette.py
resources/data/rules/: montrealgazette.json
